Add lesson 1 projects
Signed-off-by: Ronald Lamoreaux <upskill@chindraba.work>

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,8 @@
 Chindraba GA Course Work
 
+2020-08-05
+- Add projects from Lesson 1
+
 2020-07-31
 - Add Dash Project 1: Build A Personal Website
 
